--- a/src/usr/local/www/css/AISense.css
+++ b/src/usr/local/www/css/AISense.css
@@ -643,7 +643,7 @@ footer a {
     color: #e0e0e0;
 }
 
-/* All pfSense textareas benefit from using a fixed width font **/
+/* All AISense textareas benefit from using a fixed width font **/
 textarea
 {
     font-family: monospace;
