--- a/src/usr/local/www/css/AISense-dark-BETA.css
+++ b/src/usr/local/www/css/AISense-dark-BETA.css
@@ -50,7 +50,7 @@
  * OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-@import url("/css/pfSense-dark.css");
+@import url("/css/AISense-dark.css");
 
 /*** Experimental Changes Go Here ***/
 
