--- a/src/usr/local/www/css/AISense-dark.css
+++ b/src/usr/local/www/css/AISense-dark.css
@@ -50,7 +50,7 @@
  * OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-@import url("/css/pfSense.css");
+@import url("/css/AISense.css");
 @import url("/vendor/jquery/jquery-ui/themes/dark-hive/theme.css");
 
 body {
