--- a/src/usr/local/www/css/Compact-RED.css
+++ b/src/usr/local/www/css/Compact-RED.css
@@ -51,7 +51,7 @@
  * OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-@import url("/css/pfSense.css");
+@import url("/css/AISense.css");
 
 body {
     font-size: 12px;
